package com.wordz;

public enum Letter {
    INCORRECT,
    PART_CORRECT,
    CORRECT
}
